feat (feature/update-product) : tích hợp upload ảnh cho category và brand